--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,13 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-#conf
+# IntelliJ conf files
 .idea
 out
 evolutionary-wedding.iml
+
+# Test results
+test_info.txt
+
+# Documentation javadoc
+doc/
